# norm

./: .gitignore  alkalic_picrite.txt  amalia.txt  analcitite.txt  andesite.txt  arkose.txt  benmoreite.txt  brush_mountain_Tba.txt  capulin_hi_mg.txt  capulin_very_hi_mg.txt  cerro_micho.txt  cimarron_palisades_sill.txt  configure  configure.ac  gloss.txt  granite-a.txt  hagen.txt  hawaiite.txt  icelandite.txt  kpooralk_basalt.txt  lucero_phonotephrite.txt  mugearite.txt  nmorb.txt  phonolite.txt  rhyolite.txt  sample.txt  san_felipe.txt  shale.txt  tholeiitic_picrite.txt  tristanite.txt  white_mountain_tpc.txt
example/: ankaramite.txt  arc_tholeiite.txt  back_arc_basalt.txt  boninite.txt  cieneguilla_basanite_d101.txt  cieneguilla_basanite_d40.txt  comendite.txt  dacite.txt  granite-i.txt  granite-s.txt  granodiorite.txt  grawacke.txt  hial_andesite.txt  highal_basalt.txt  ib10_rhyolite.txt  ib11_pantellerite.txt  ib12_comendite.txt  ib13_alkalic_picrite.txt  ib14_ankaramite.txt  ib15_kpoor_alkali_olivine_basalt.txt  ib16_krich_alkali_olivine_basalt.txt  ib17_trachybasalt.txt  ib18_hawaiite.txt  ib19_mugearite.txt  ib1_tholeiitic_picrite_basalt.txt  ib20_tristanite.txt  ib22_trachyte.txt  ib23_phonolite.txt  ib2_olivine_tholeiite.txt  ib3_tholeiite.txt  ib4_tholeiitic_andesite.txt  ib5_icelandite.txt  ib6_hial_basalt.txt  ib7_hial_andesite.txt  ib8_andesite.txt  ib9_dacite.txt  kilauea_1.txt  kilauea_15.txt  krichalk_basalt.txt  leucitite.txt  (+16 more)
po/: .gitignore
po/CVS/: Entries  Repository  Root
src/: IBC_classify.cc  Makefile.am  TAS_classify.cc  calculate_CIPW_norm.cc  calculate_differentiation_index.cc  calculate_molar_composition.cc  clear_CIPW_norm_box.cc  clear_cation_norm_box.cc  composition.hh  do_save.cc  gui.hh  main.cc  norm.ui  normalize.cc  on_new.cc  on_open.cc  on_save.cc  on_save_as.cc  populate_CIPW_norm_box.cc  populate_cation_norm_box.cc  populate_mole_composition_box.cc  read_weight_composition.cc  subalkaline_classify.cc  update.cc
